<resources>
    <string name="app_name">Appointments</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User name:</string>
    <string name="type_username_here">Type username here</string>
    <string name="password">Password</string>
    <string name="type_password_here">Type password here</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google_account">Log in with google account</string>
    <string name="password_again">Password again:</string>
    <string name="type_password_here_again">Type password here again</string>
    <string name="cancel">Cancel</string>
    <string name="fieldsInvalid">Some of the fields are invalid!</string>
    <string name="successful_registration">Successful registration!</string>
    <string name="unsuccessful_registration">Failed registration!</string>
    <string name="reqired">This field cannot be empty</string>
    <string name="password_min_length">Password needs to be at least 6 characters!</string>
    <string name="passwords_dont_equal">The two passwords have to be the same!</string>
    <string name="must_be_valid_email">Must be a valid email address!</string>
    <string name="unsuccessful_login">Incorrect user name or password</string>
    <string name="unsuccessful_google_login">Unsuccessfull google login</string>
    <string name="element_text">Placeholder text</string>
    <string name="add_button">Add new appointment</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="checkConnection">Google login failed, check internet connection</string>
    <string name="name">Name</string>
    <string name="contact_type">Contact type (tel, email etc)</string>
    <string name="contact">Contact (eg: tel number)</string>
    <string name="ok">Ok</string>
    <string name="new_person">Add new person</string>
    <string name="tap_to_add_more">Tap to add more</string>
    <string name="add">Add</string>
    <string name="description_icon">Description icon</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="place">Place</string>
    <string name="category_icon">Category icon</string>
    <string name="place_icon">Place icon</string>
    <string name="date">Date</string>
    <string name="date_icon">Date icon</string>
    <string name="time">Time</string>
    <string name="people">People</string>
    <string name="notes">Notes</string>
    <string name="pick_a_date">Pick a date!</string>
    <string name="pick_a_time">Pick a time!</string>
    <string name="choose_photo">Choose photo</string>
    <string name="take_photo">Take photo</string>
    <string name="storage_permission_gallery_error">Without storage permission you cannot choose image from gallery</string>
    <string name="no_camera_error">Camera app could not be found!</string>
    <string name="io_error">Internal IO error, please try again!</string>
    <string name="no_gallery_error">Gallery app could not be found!</string>
    <string name="image_fetch_failed">Image fetching operation failed!</string>
    <string name="click_here_to_choose_image">Click here to choose an image!</string>
    <string name="new_note">New note</string>
    <string name="navigate_back">Navigate back</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="new_appointment">New</string>
    <string name="list_appointment_error">Failed to fetch appointments. Maybe no connection?</string>
    <string name="save_error">Failed to save appointment. Maybe no connection?</string>
    <string name="list_activity_title">Appointments</string>
    <string name="appointment_details">Appointment details</string>
    <string name="data_loading_error">Could not load data</string>
    <string name="status">Status</string>
    <string name="initialized_status">Active</string>
    <string name="confirmed_status">Confirmed</string>
    <string name="cancelled_status">Cancelled</string>
    <string name="completed_status">Overdue</string>
    <string name="failed_status">Failed</string>
    <string name="empty_string" />
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Warning</string>
    <string name="delete_dialog_message">Do you really want to delete this appointment?</string>
    <string name="deletion_failed">Could not delete item! Maybe no connection?</string>
    <string name="image_conversion_error">Image conversion failed</string>
    <string name="show_overdue">Show overdue</string>
    <string name="hide_overdue">Hide overdue</string>
    <string name="channel_name">main channel</string>
    <string name="channel_description">normal notifications</string>
    <string name="number_of_overdue_appointments">There are %d overdue appointments!</string>
    <string name="edit_activity_validation_message">Description, Category, Place cannot be empty or blank, and the date has to be a future date</string>
    <string name="this_cant_be_empty">This cannot be empty!</string>
    <string name="login_validation_error" >Username and password cannot be empty</string>
</resources>