<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/contactType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:hint="@string/contact_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_big"
        android:fontFamily="sans-serif"
        android:hint="@string/contact"
        android:inputType="text" />

</LinearLayout>