<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="VM"
            type="com.utamas.appointments.viewmodel.EditAppointmentViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".activity.ViewAppointmentActivity">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/imageTextView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@{VM.image ?? @drawable/baseline_image_24}"
                    android:fontFamily="sans-serif-light"
                    android:gravity="bottom|center"
                    android:onClick="getImage"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1.5"
                    android:shadowDy="1.5"
                    android:shadowRadius="2"
                    android:text="@string/click_here_to_choose_image"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/input_field_left_right"
                    android:layout_marginVertical="@dimen/input_field_top_bottom"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageTextView"
                    app:startIconContentDescription="@string/description_icon"
                    app:startIconDrawable="@drawable/baseline_description_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={VM.description}"
                        android:maxLines="1" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/categoryTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/input_field_left_right"
                    android:layout_marginVertical="@dimen/input_field_top_bottom"
                    android:hint="@string/category"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTextInput"
                    app:startIconContentDescription="@string/category_icon"
                    app:startIconDrawable="@drawable/baseline_category_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={VM.category}"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/placeTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/input_field_left_right"
                    android:layout_marginVertical="@dimen/input_field_top_bottom"
                    android:hint="@string/place"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoryTextInput"
                    app:startIconContentDescription="@string/place_icon"
                    app:startIconDrawable="@drawable/baseline_place_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={VM.place}"

                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/input_field_left_right"
                    android:layout_marginVertical="@dimen/input_field_top_bottom"
                    android:hint="@string/date"
                    app:layout_constraintEnd_toEndOf="@id/guideline11"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/placeTextInput"
                    app:startIconContentDescription="@string/date_icon"
                    app:startIconDrawable="@drawable/baseline_event_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{VM.validForDate}"

                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeTextInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/input_field_left_right"
                    android:layout_marginVertical="@dimen/input_field_top_bottom"
                    android:hint="@string/time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/guideline11"
                    app:layout_constraintTop_toBottomOf="@+id/placeTextInput"
                    app:startIconContentDescription="@string/date_icon"
                    app:startIconDrawable="@drawable/baseline_event_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={VM.validForTime}"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupNotes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintEnd_toStartOf="@+id/guideline11"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateTextInput">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes"
                        app:chipIcon="@drawable/baseline_notes_24" />


                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addNote"
                        android:text="@string/add"
                        app:chipIcon="@drawable/outline_add_black_18" />
                </com.google.android.material.chip.ChipGroup>


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline11"
                    app:layout_constraintTop_toBottomOf="@+id/timeTextInput">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/people"
                        app:chipIcon="@drawable/baseline_group_24" />

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="addPerson"
                        android:text="@string/add"
                        app:chipIcon="@drawable/outline_add_black_18" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>